--- a/Practica 1/practica1.tex
+++ b/Practica 1/practica1.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{graphicx}
+\usepackage{url}
 
 \begin{document}
 
@@ -38,18 +39,18 @@
 	\begin{section}{Detecci\'on de plagio.}
 		
 		\begin{subsection}{Definici\'on.}
-			Seg\'un \textit{plagiarism.org}, se considera plagio la acci\'on de presentar o usar trabajo de otro autor sin citarlo y sin especificar la fuente de procedencia.
-			Seg\'un la RAE, plagiar se define como la acci\'on de copiar obras ajenas y darlas a conocer como propias.\\
+			Seg\'un \textit{plagiarism.org}\cite{plagiarism_org}, se considera plagio la acci\'on de presentar o usar trabajo de otro autor sin citarlo y sin especificar la fuente de procedencia.
+			Seg\'un la RAE\cite{rae}, plagiar se define como la acci\'on de copiar obras ajenas y darlas a conocer como propias.\\
 			
 			En el \'area que nos compete, hablaremos de plagio en texto escrito, aunque tambien se considera plagio el uso de cualquier producci\'on de un autor sin su debida menci\'on. Cabe mencionar el caso de los archivos multimedia. Publicar im\'agenes, v\'ideos o fragmentos y composiciones de los mismos de otro autor sin su correspondiente fuente de procedencia tambi\'en es motivo de conflicto.
 			
 		\end{subsection}
 		
 		\begin{subsection}{Casos de plagio en la actualidad.}
-			En 2015 se abri\'o una p\'agina de Facebook llamada \textit{Cabronazi} que empez\'o a publicar fotograf\'ias con mensajes graciosos. Tres a\~nos despu\'es cuenta con m\'as de 12 millones de seguidores y factura cerca de 370000 euros al a\~no. No obstante, detr\'as de este \'exito muchos usuarios se quejan de que la mayor\'ia de las publicaciones son plagio de otras en las redes sociales. Puede verse la discusi\'on en \textit{https://www.elconfidencial.com/tecnologia/2018-08-09/cabronazi-cabroworld-carlos-soria-bernardo-memes\_1602201/} .\\
+			En 2015 se abri\'o una p\'agina de Facebook llamada \textit{Cabronazi} que empez\'o a publicar fotograf\'ias con mensajes graciosos. Tres a\~nos despu\'es cuenta con m\'as de 12 millones de seguidores y factura cerca de 370000 euros al a\~no. No obstante, detr\'as de este \'exito muchos usuarios se quejan de que la mayor\'ia de las publicaciones son plagio de otras en las redes sociales. Puede verse la discusi\'on en el peri\'odico \textit{El Confidencial}\cite{elconfidencial} .\\
 			
 			
-			Un tema que genera m\'as controversia en la actualidad es el de Pedro S\'anchez, al que acusan de haber plagiado ciertas partes de su tesis doctoral. Tras haber publicado en internet dicha tesis, distintos medios han examinado el documento. Estos son los resultados seg\'un uno de esos medios: \textit{https://elpais.com/politica/2018/09/14/actualidad/1536938921\_232616.html}.
+			Un tema que genera m\'as controversia en la actualidad es el de Pedro S\'anchez, al que acusan de haber plagiado ciertas partes de su tesis doctoral. Tras haber publicado en internet dicha tesis, distintos medios han examinado el documento. Estos son los resultados seg\'un uno de esos medios\cite{sanchez}.
 			
 		\end{subsection}
 		
@@ -71,32 +72,14 @@
 		
 		
 		\begin{subsection}{Temporizaci\'on de b\'usqueda.}
-		\begin{center}
-			\begin{tabular}{p{14cm}}
-				\hline
-				Detecci\'on de plagio \\
-				\hline
-				https://wwwhatsnew.com/2017/10/07/4-sitios-web-para-detectar-plagios/ & 2 minutos \\ \hline
-				Plagiarism detection \\ \hline
-				https://en.wikipedia.org/wiki/Plagiarism\_detection & 11 minutos \\ \hline
-				Plagiarism \\ \hline
-				https://www.plagiarism.org & 8 minutos \\ \hline
-				Bag of words \\ \hline
-				https://medium.com/greyatom/an-introduction-to-bag-of-words-in-nlp-ac967d43b428 & 4 minutos \\ \hline
-				Estilometr\'ia \\ \hline
-				https://www.estilometria.com/ & 2 minutos \\ \hline
-				RAE \\ \hline
-				http://dle.rae.es/?id=TIZy4Xb & 1 minuto \\ \hline
-				El cabronazi plagio \\ \hline
-				https://www.elconfidencial.com/tecnologia/2018-08-09/cabronazi-cabroworld-carlos-soria-bernardo-memes\_1602201/ & 6 minutos \\ \hline
-				Plagio Sanchez \\ \hline
-				https://elpais.com/politica/2018/09/14/actualidad/1536938921\_232616.html & 4 minutos \\ \hline
-			\end{tabular}
-		\end{center}
+			\includegraphics[width=0.8\textwidth]{plagio_tiempos.png}
 		\end{subsection}
 	\end{section}
 
 
+\newpage
 
+\bibliographystyle{plain}
+\bibliography{bibliografia.bib}
 
 \end{document}
