Añadiendo, aún sin terminar, SEO

--- a/Practica 1/practica1.tex
+++ b/Practica 1/practica1.tex
@@ -1,5 +1,4 @@
-\documentclass[12pt]{article}
-\usepackage{graphicx}
+\input{preambuloSimple.tex}
 
 \begin{document}
 
@@ -27,15 +26,37 @@
 	\newpage
 
 
-	\begin{section}{Formatos de codificaci\'on.}
+	\begin{section}{Formatos de codificación}
 		
 	\end{section}
+	
+	\newpage
 
 	\begin{section}{SEO.}
+		SEO (Search Engine Optimization) o posicionamiento en buscadores es uno de los conceptos claves de la industria digital. Tanto el posicionamiento en sí como la profesión que subyace, el SEO se ha convertido en algo que todo empresario, experto en marketing o incluso \textit{influencer} desea entender, manejar o, en el peor de los casos, contratar. En este pequeño informe tratamos de clarificar qué es exactamente el posicionamiento en buscadores desde un punto de vista técnico y por qué es necesario para los afamados \textit{e-business}, así como cuál es el camino para convertirse en un profesional SEO.
+		
+		 \subsection{SEO como herramienta de marketing digital}
+		 	Tal y como \cite{redevolution} menciona, SEO es ``el nombre que se le da a la actividad que intenta mejorar los rankings en las búsquedas", es decir, la posición en la que una página web aparece tras realizar una búsqueda con palabras clave (keywords) relacionadas con dicha web. Hay que añadir que, pese a que nuestra web tenga un gran posicionamiento en buscadores, fruto de un trabajo constante que más abajo desarrollamos, los anuncios (que reportan beneficios a Google u otros buscadores) aparecerán siempre antes. Por tanto, el objetivo del SEO es mejorar la posición de una página dentro de las denominadas \textit{búsquedas orgánicas} o \textit{naturales}. Las empresas tienen especial interés en estar presentes de forma conveniente en buscadores y redes dado que recibirán más visitas y, eventualmente, esas visitas se convierten en ventas o beneficios. Por tanto, a pesar de su peso técnico-informático, SEO es una estrategia de marketing en Internet. Como se puede leer en \cite{wiki}, como estrategia de marketing digital, "SEO considera cómo funcionan los buscadores, es decir, los algoritmos de búsqueda subyacentes que dictan el comportamiento de la búsqueda". Gran papel juegan las palabras clave o \textit{keywords} y los enlaces. Además, en los últimos tiempos se están desarrollando nuevos productos entorno al SEO móvil dado que las búsquedas móviles han superado a las mismas realizadas en PCs. \\
+		 	
+		 	El auge del posicionamiento en buscadores tiene una gran relación con Google. Desde que Larry Page y Sergey Brin idearon \textit{Backrub} y su algoritmo \textit{PageRank}, basado en la cantidad e importancia de los llamados \textit{backlinks o inbound links} (enlaces que recibe una web desde otra o, en otras palabras, la cantidad de páginas que enlazan con el sitio web a través de un vínculo \cite{backl}), los distintos propietarios de páginas se percataron de la importancia del posicionamiento y trataron de 'inflar' su PageRank. Ante los intentos de manipular fraudulentamente el PageRank por medio de SPAM, Google desarrolló en 2012 un algoritmo llamado \textit{Google Penguin}, que evalúa la calidad de los links de los que proceden las páginas web.
+		 	
+		 	\subsection{Herramientas SEO}
+		 	
+		 	Como dice \cite{seoc}, existen multitud de herramientas que nos ayudan a conocer el posicionamiento en buscadores de una página o negocio online. Entre ellas destacan:
+		 	\begin{itemize}
+		 		\item Google Analytics: Genera estadística con multitud de información interesante para nuestro negocio,  como cuándo y cuántos usuarios navegan por nuestra web.
+		 		\item Webmaster Tools
+		 		\item Bing Webmaster Tools
+		 		\item Sitemap XMl Generator
+		 		\item Herramienta de palabras clave Adwords: Nos ayuda a crear contenido que nos permitan generar textos de calidad y originales.
+		 		\item Google Trends: Nos ayuda a buscar tendencias entre los usuarios en torno a un producto o servicio
+		 	\end{itemize}
 		
 	\end{section}
 
-	\begin{section}{Detecci\'on de plagio.}
+	\newpage
+
+	\begin{section}{Detecci\'on de plagio}
 		
 		\begin{subsection}{Definici\'on.}
 			Seg\'un \textit{plagiarism.org}, se considera plagio la acci\'on de presentar o usar trabajo de otro autor sin citarlo y sin especificar la fuente de procedencia.
@@ -69,34 +90,13 @@
 			\end{itemize}
 		\end{subsection}
 		
-		
-		\begin{subsection}{Temporizaci\'on de b\'usqueda.}
-		\begin{center}
-			\begin{tabular}{p{14cm}}
-				\hline
-				Detecci\'on de plagio \\
-				\hline
-				https://wwwhatsnew.com/2017/10/07/4-sitios-web-para-detectar-plagios/ & 2 minutos \\ \hline
-				Plagiarism detection \\ \hline
-				https://en.wikipedia.org/wiki/Plagiarism\_detection & 11 minutos \\ \hline
-				Plagiarism \\ \hline
-				https://www.plagiarism.org & 8 minutos \\ \hline
-				Bag of words \\ \hline
-				https://medium.com/greyatom/an-introduction-to-bag-of-words-in-nlp-ac967d43b428 & 4 minutos \\ \hline
-				Estilometr\'ia \\ \hline
-				https://www.estilometria.com/ & 2 minutos \\ \hline
-				RAE \\ \hline
-				http://dle.rae.es/?id=TIZy4Xb & 1 minuto \\ \hline
-				El cabronazi plagio \\ \hline
-				https://www.elconfidencial.com/tecnologia/2018-08-09/cabronazi-cabroworld-carlos-soria-bernardo-memes\_1602201/ & 6 minutos \\ \hline
-				Plagio Sanchez \\ \hline
-				https://elpais.com/politica/2018/09/14/actualidad/1536938921\_232616.html & 4 minutos \\ \hline
-			\end{tabular}
-		\end{center}
-		\end{subsection}
+	
+	
 	\end{section}
 
 
-
+\newpage
+\bibliography{citas} %archivo citas.bib que contiene las entradas 
+\bibliographystyle{plain} % hay varias formas de citar
 
 \end{document}
