--- a/Practica 1/practica1.tex
+++ b/Practica 1/practica1.tex
@@ -104,7 +104,7 @@
 
 \newpage
 
-\bibliography{citas} %archivo citas.bib que contiene las entradas 
+\bibliography{bibliografia} %archivo citas.bib que contiene las entradas 
 \bibliographystyle{plain} % hay varias formas de citar
 
 
