--- a/Practica 1/bibliografia.bib
+++ b/Practica 1/bibliografia.bib
@@ -21,3 +21,24 @@ title={Art\'iculo sobre la tesis de Pedro S\'anchez},
 note={\url{(https://elpais.com/politica/2018/09/14/actualidad/1536938921\_232616.html)}},
 year={2018},
 }
+
+@misc{redevolution,
+        title = "\url{https://www.redevolution.com/what-is-seo}",
+        year = "consultado el 18 de septiembre de 2018",
+}
+
+@misc{wiki,
+	title = "\url{https://en.wikipedia.org/wiki/Search_engine_optimization}",
+	year = "consultado el 18 de septiembre de 2018",
+}
+
+@misc{backl,
+	title ="\url{https://es.wikipedia.org/wiki/Backlink}",
+	year = "consultado el 18 de septiembre de 2018",
+}
+
+@misc{seoc,
+	title = "\url{https://www.seoalcuadrado.es/seo-que-es/}",
+	year = "consultado el 18 de septiembre de 2018",
+}
+
