--- a/Practica 1/bibliografia.bib
+++ b/Practica 1/bibliografia.bib
@@ -22,6 +22,11 @@ note={\url{(https://elpais.com/politica/2018/09/14/actualidad/1536938921\_232616
 year={2018},
 }
 
+@misc{unicode,
+        title = "\url{https://unicode.org/}",
+        year = "consultado el 19 de septiembre de 2018",
+}
+
 @misc{redevolution,
         title = "\url{https://www.redevolution.com/what-is-seo}",
         year = "consultado el 18 de septiembre de 2018",
@@ -39,6 +44,6 @@ year={2018},
 
 @misc{seoc,
 	title = "\url{https://www.seoalcuadrado.es/seo-que-es/}",
-	year = "consultado el 18 de septiembre de 2018",
+year = "consultado el 18 de septiembre de 2018",
 }
 
