--- a/Practica 1/practica1.tex
+++ b/Practica 1/practica1.tex
@@ -2,7 +2,7 @@
 
 
 \begin{document}
-
+	
 	\begin{titlepage}
 		\centering
 		\includegraphics[width=0.8\textwidth]{decsai.jpeg}\par\vspace{1cm}
@@ -25,38 +25,57 @@
 	\tableofcontents
 	
 	\newpage
-
-
-	\begin{section}{Formatos de codificación}
+	
+	
+	\begin{section}{Formatos de codificaci\'on}
+		\begin{subsection}{Codificación de caracteres.}
+			La codificación de caracteres es un método indispensable en la informática moderna, ya que nos permite comunicar y almacenar caracteres desde la representación binaria. No obstante, las técnicas de codificación de caracteres son algo más antigua, un ejemplo de ello es el código Morse. \\
+			
+			Desde el punto vista técnico, entendemos por una codificación de caracteres un sistema por el cual representamos caracteres identificándolos uno a uno con otros símbolos normados. 
+		\end{subsection}
+		
+		\begin{subsection}{Formatos de codificación en informática.}
+			En informática, uno de los primeros formatos de codificación que aparece es el ASCII. Este sistema de codificación usa un código de 7 bits. Cada combinación representa un caracter, es decir, tiene 128 caracteres codificados. Este número era suficiente para representar textos en inglés y números, pero pronto quedó expuesta la necesidad de incluir otros caracteres, por ejemplo las caracteres latinos con tildes y otros signos de acentuación. \\
+			
+			Para ampliar la gama de caracteres y al mismo tiempo mantener la retrocompatibilidad UNICODE\cite{unicode}, el consorcio para la estandarización de codificación de caracteres, creo el formato UTF-8. Este formato es compatible con ASCII, pero difiere en el tamaño que ocupa un caracter. En UTF-8 los caracteres pueden ocupar 1, 2, 3 o 4 segmentos de 8 bits, siendo el primer segmento el mismo que el de ASCII.  Esta nueva codificiación permite representar hasta 1,112,064 caracteres, incluyendo alfabetos occidentales, orientales, símbolos matemáticos e incluso algunos de tipo privado. \\
+			
+			Otra codificiación de UNICODE es el UTF-16. Este formato usa 1 o 2 segmentos de 16 bits por caracter, por tanto ya no es compatible con ASCII. No obstante, para lenguajes orientales, como el japonés, la mayoría de los caracteres pueden representarse con 16 bits, lo que aumenta la rapidez de lectura. \\ 
+			
+			Existe tambien el formato UTF-32, con la obligatoriedad de usar 1 segmento de 32 bits por caracter. Al igual que el anterior, no es compatible con ASCII y además es bastante más pesado e ineficiente, pues muchos bits son desaprovechados. Esto lo convierte en un formato poco usado en la actualidad.
+		\end{subsection}
+		
+		\begin{subsection}{Temporizaci\'on de b\'usqueda.}
+			\includegraphics[width=1\textwidth]{codificacion_tiempos.png}
+		\end{subsection}
 		
 	\end{section}
 	
 	\newpage
-
+	
 	\begin{section}{SEO.}
 		SEO (Search Engine Optimization) o posicionamiento en buscadores es uno de los conceptos claves de la industria digital. Tanto el posicionamiento en sí como la profesión que subyace, el SEO se ha convertido en algo que todo empresario, experto en marketing o incluso \textit{influencer} desea entender, manejar o, en el peor de los casos, contratar. En este pequeño informe tratamos de clarificar qué es exactamente el posicionamiento en buscadores desde un punto de vista técnico y por qué es necesario para los afamados \textit{e-business}, así como cuál es el camino para convertirse en un profesional SEO.
 		
-		 \subsection{SEO como herramienta de marketing digital}
-		 	Tal y como \cite{redevolution} menciona, SEO es ``el nombre que se le da a la actividad que intenta mejorar los rankings en las búsquedas", es decir, la posición en la que una página web aparece tras realizar una búsqueda con palabras clave (keywords) relacionadas con dicha web. Hay que añadir que, pese a que nuestra web tenga un gran posicionamiento en buscadores, fruto de un trabajo constante que más abajo desarrollamos, los anuncios (que reportan beneficios a Google u otros buscadores) aparecerán siempre antes. Por tanto, el objetivo del SEO es mejorar la posición de una página dentro de las denominadas \textit{búsquedas orgánicas} o \textit{naturales}. Las empresas tienen especial interés en estar presentes de forma conveniente en buscadores y redes dado que recibirán más visitas y, eventualmente, esas visitas se convierten en ventas o beneficios. Por tanto, a pesar de su peso técnico-informático, SEO es una estrategia de marketing en Internet. Como se puede leer en \cite{wiki}, como estrategia de marketing digital, "SEO considera cómo funcionan los buscadores, es decir, los algoritmos de búsqueda subyacentes que dictan el comportamiento de la búsqueda". Gran papel juegan las palabras clave o \textit{keywords} y los enlaces. Además, en los últimos tiempos se están desarrollando nuevos productos entorno al SEO móvil dado que las búsquedas móviles han superado a las mismas realizadas en PCs. \\
-		 	
-		 	El auge del posicionamiento en buscadores tiene una gran relación con Google. Desde que Larry Page y Sergey Brin idearon \textit{Backrub} y su algoritmo \textit{PageRank}, basado en la cantidad e importancia de los llamados \textit{backlinks o inbound links} (enlaces que recibe una web desde otra o, en otras palabras, la cantidad de páginas que enlazan con el sitio web a través de un vínculo \cite{backl}), los distintos propietarios de páginas se percataron de la importancia del posicionamiento y trataron de 'inflar' su PageRank. Ante los intentos de manipular fraudulentamente el PageRank por medio de SPAM, Google desarrolló en 2012 un algoritmo llamado \textit{Google Penguin}, que evalúa la calidad de los links de los que proceden las páginas web.
-		 	
-		 	\subsection{Herramientas SEO}
-		 	
-		 	Como dice \cite{seoc}, existen multitud de herramientas que nos ayudan a conocer el posicionamiento en buscadores de una página o negocio online. Entre ellas destacan:
-		 	\begin{itemize}
-		 		\item Google Analytics: Genera estadística con multitud de información interesante para nuestro negocio,  como cuándo y cuántos usuarios navegan por nuestra web.
-		 		\item Webmaster Tools
-		 		\item Bing Webmaster Tools
-		 		\item Sitemap XMl Generator
-		 		\item Herramienta de palabras clave Adwords: Nos ayuda a crear contenido que nos permitan generar textos de calidad y originales.
-		 		\item Google Trends: Nos ayuda a buscar tendencias entre los usuarios en torno a un producto o servicio
-		 	\end{itemize}
+		\subsection{SEO como herramienta de marketing digital}
+		Tal y como \cite{redevolution} menciona, SEO es ``el nombre que se le da a la actividad que intenta mejorar los rankings en las búsquedas", es decir, la posición en la que una página web aparece tras realizar una búsqueda con palabras clave (keywords) relacionadas con dicha web. Hay que añadir que, pese a que nuestra web tenga un gran posicionamiento en buscadores, fruto de un trabajo constante que más abajo desarrollamos, los anuncios (que reportan beneficios a Google u otros buscadores) aparecerán siempre antes. Por tanto, el objetivo del SEO es mejorar la posición de una página dentro de las denominadas \textit{búsquedas orgánicas} o \textit{naturales}. Las empresas tienen especial interés en estar presentes de forma conveniente en buscadores y redes dado que recibirán más visitas y, eventualmente, esas visitas se convierten en ventas o beneficios. Por tanto, a pesar de su peso técnico-informático, SEO es una estrategia de marketing en Internet. Como se puede leer en \cite{wiki}, como estrategia de marketing digital, "SEO considera cómo funcionan los buscadores, es decir, los algoritmos de búsqueda subyacentes que dictan el comportamiento de la búsqueda". Gran papel juegan las palabras clave o \textit{keywords} y los enlaces. Además, en los últimos tiempos se están desarrollando nuevos productos entorno al SEO móvil dado que las búsquedas móviles han superado a las mismas realizadas en PCs. \\
+		
+		El auge del posicionamiento en buscadores tiene una gran relación con Google. Desde que Larry Page y Sergey Brin idearon \textit{Backrub} y su algoritmo \textit{PageRank}, basado en la cantidad e importancia de los llamados \textit{backlinks o inbound links} (enlaces que recibe una web desde otra o, en otras palabras, la cantidad de páginas que enlazan con el sitio web a través de un vínculo \cite{backl}), los distintos propietarios de páginas se percataron de la importancia del posicionamiento y trataron de 'inflar' su PageRank. Ante los intentos de manipular fraudulentamente el PageRank por medio de SPAM, Google desarrolló en 2012 un algoritmo llamado \textit{Google Penguin}, que evalúa la calidad de los links de los que proceden las páginas web.
+		
+		\subsection{Herramientas SEO}
+		
+		Como dice \cite{seoc}, existen multitud de herramientas que nos ayudan a conocer el posicionamiento en buscadores de una página o negocio online. Entre ellas destacan:
+		\begin{itemize}
+			\item Google Analytics: Genera estadística con multitud de información interesante para nuestro negocio,  como cuándo y cuántos usuarios navegan por nuestra web.
+			\item Webmaster Tools
+			\item Bing Webmaster Tools
+			\item Sitemap XMl Generator
+			\item Herramienta de palabras clave Adwords: Nos ayuda a crear contenido que nos permitan generar textos de calidad y originales.
+			\item Google Trends: Nos ayuda a buscar tendencias entre los usuarios en torno a un producto o servicio
+		\end{itemize}
 		
 	\end{section}
-
+	
 	\newpage
-
+	
 	\begin{section}{Detecci\'on de plagio}
 		
 		\begin{subsection}{Definici\'on.}
@@ -79,33 +98,33 @@
 			Existen numerosos m\'etodos para detectar plagio. Los m\'as frecuentes por su rapidez son los software de detecci\'on de plagio, aunque para usarlos se necesita los documentos en formato digital.\\ 
 			\begin{itemize}
 				
-
-			\item \textbf{Cadenas de texto.} La mayor\'ia del software comercial se basa en la comparaci\'on de cadenas de texto. Usan una base de datos de documentos para enfrentar el documento sospechoso. Esto plantea un inconveniente, puede que la base de datos usada no sea suficientemente extensa o no contenga el documento plagiado. Se podr\'ia intentar a\~nadir la mayor cantidad de textos posibles para mejorar el contraste, pero esto supondr\'ia una penalizaci\'on en tiempo de c\'omputo.\\
-			
-			\item \textbf{Bolsas de palabras.} Una forma de reducir el tiempo ser\'ia usar comparaci\'on de bolsas de palabras. Una bolsa de palabras es un vector que representa las palabras de un texto. Por tanto, al usar bolsas de palabras estamos comprobando si dos textos usan el mismo vocabulario, obviando el orden en el que las palabras aparecen. Esto produce una reducci\'on de la eficacia del m\'etodo.
-			
-			Notar que sendos m\'etodos pueden ser mejorados con el uso de diccionarios de sin\'onimos y traductores para evitar la reformulaci\'on de oraciones y las traducciones.\\
-			
-			\item \textbf{Analizador de estilo.} Existen otras t\'ecnicas que proveen un an\'alisis m\'as profundo del texto, por ejemplo los analizadores de estilo. Este tipo de detectores analizan distintos aspectos en el discurso de un autor para hacer un perfil de escritura. Este perfil se puede caracterizar por la longitud de las oraciones, el uso de muletillas o de reformuladores del discurso. Cuando se introduce un nuevo documento en el sistema, se realizar un an\'alisis para encontrar estilos similares. Hay que notar que un analizador de estilo es sensible a idiomas, por tanto, las traducciones no literales de textos no ser\'ian detectadas por este m\'etodo.
-			
+				
+				\item \textbf{Cadenas de texto.} La mayor\'ia del software comercial se basa en la comparaci\'on de cadenas de texto. Usan una base de datos de documentos para enfrentar el documento sospechoso. Esto plantea un inconveniente, puede que la base de datos usada no sea suficientemente extensa o no contenga el documento plagiado. Se podr\'ia intentar a\~nadir la mayor cantidad de textos posibles para mejorar el contraste, pero esto supondr\'ia una penalizaci\'on en tiempo de c\'omputo.\\
+				
+				\item \textbf{Bolsas de palabras.} Una forma de reducir el tiempo ser\'ia usar comparaci\'on de bolsas de palabras. Una bolsa de palabras es un vector que representa las palabras de un texto. Por tanto, al usar bolsas de palabras estamos comprobando si dos textos usan el mismo vocabulario, obviando el orden en el que las palabras aparecen. Esto produce una reducci\'on de la eficacia del m\'etodo.
+				
+				Notar que sendos m\'etodos pueden ser mejorados con el uso de diccionarios de sin\'onimos y traductores para evitar la reformulaci\'on de oraciones y las traducciones.\\
+				
+				\item \textbf{Analizador de estilo.} Existen otras t\'ecnicas que proveen un an\'alisis m\'as profundo del texto, por ejemplo los analizadores de estilo. Este tipo de detectores analizan distintos aspectos en el discurso de un autor para hacer un perfil de escritura. Este perfil se puede caracterizar por la longitud de las oraciones, el uso de muletillas o de reformuladores del discurso. Cuando se introduce un nuevo documento en el sistema, se realizar un an\'alisis para encontrar estilos similares. Hay que notar que un analizador de estilo es sensible a idiomas, por tanto, las traducciones no literales de textos no ser\'ian detectadas por este m\'etodo.
+				
 			\end{itemize}
 		\end{subsection}
 		
-
+		
 		
 		\begin{subsection}{Temporizaci\'on de b\'usqueda.}
-			\includegraphics[width=0.8\textwidth]{plagio_tiempos.png}
+			\includegraphics[width=1\textwidth]{plagio_tiempos.png}
 		\end{subsection}
-
-	
-
+		
+		
+		
 	\end{section}
-
-
-\newpage
-
-\bibliography{bibliografia} %archivo citas.bib que contiene las entradas 
-\bibliographystyle{plain} % hay varias formas de citar
-
-
+	
+	
+	\newpage
+	
+	\bibliography{bibliografia.bib} %archivo citas.bib que contiene las entradas 
+	\bibliographystyle{plain} % hay varias formas de citar
+	
+	
 \end{document}
