--- a/Practica 1/practica1.tex
+++ b/Practica 1/practica1.tex
@@ -71,9 +71,63 @@
 			\item Herramienta de palabras clave Adwords: Nos ayuda a crear contenido que nos permitan generar textos de calidad y originales.
 			\item Google Trends: Nos ayuda a buscar tendencias entre los usuarios en torno a un producto o servicio
 		\end{itemize}
+	
+		\subsection{Técnicas SEO}
+		Las técnicas del posicionamiento pueden ser muy variadas. Según \cite{tutorial}, las técnicas SEO se pueden clasificar en dos categorías:
+		\begin{itemize}
+			\item White hat SEO: Técnicas recomendadas por los buscadores como buen diseño
+			\item Black hat SEO: Conocidas como spamdexing, no son aprobadas por los buscadores.
+		\end{itemize}
 		
+		\subsubsection{White Hat SEO}
+			Una táctica SEO se considera White hat si tiene las siguientes características:
+			\begin{itemize}
+				\item Sigue las indicaciones del buscador.
+				\item No es engañosa.
+				\item Asegura que el contenido que el buscador indexa es el mismo que el usuario verá finalmente.
+				\item Asegura que el contenido de la web se ha creado por algún usuario.
+				\item Asegura un contenido de calidad.
+				\item Asegura disponibilidad del contenido web.
+			\end{itemize}
+		
+		\subsection{Spamdexing}
+			El nombre es una contracción del inglés que se refiere a la indexación de spam, como vemos a continuación:
+			\begin{itemize}
+				\item Sirve una versión de la página para bots y otra para usuarios humanos (Cloaking).
+				\item Repite keywords en las metaetiquetas, así como usa keywords no relacionadas con el contenido de la web (Metatag Stuffing)
+				\item Páginas web de contenido de baja calidad pero manipuladas con palabras clave (Gateway Pages).
+				\item Crear una página web con contenido similar a otra página, pero que redirige a webs maliciosas (Page hijacking)
+			\end{itemize}
+			
+			Hoy en día los buscadores son capaces de identificar todas estas características maliciosas de las indexaciones, por lo que se recomienda no incluir ningún enlace de estas características para mejorar la posición.
 	\end{section}
 	
+	\subsection{SEO como profesión}
+		Como hemos comentado anteriormente, el posicionamiento en buscadores es una pieza clave en el marketing online de las empresas. Tanto es así que ha dado lugar a una nueva profesión: el especialista SEO. En palabras de \cite{seo-prof}, los especialistas en posicionamiento no son normalmente programadores web, si no que son promotores de diseños web de calidad. Un SEO debe poseer un gran número de habilidades, como las siguientes:
+		
+		\begin{itemize}
+			\item Capacidad de análisis de páginas web.
+			 \item Capacidad de optimizar palabras clave.
+			\item Generación de contenido, para mantener una web de gran calidad llena de información en cualquier formato.
+			\item Configuración de los parámetros del buscador.
+			\item Habilidades IT, con gran conocimiento de HTML, CSS y otros lenguajes de programación.
+			\item Capacidad de resolver problemas
+			\item Conocimientos de marketing, comunicaciones o negocios.
+		\end{itemize}
+	
+		Hay ciertos aspectos en los que un especialista SEO se puede centrar. Algunos de ellos son:
+		
+		\begin{itemize}
+			\item Escritor del contenido. Una ocupación menos técnica y más de marketing,pero crítica para un buen posicionamiento.
+			\item Link builder, de gran importancia ya que elegir links de páginas web reputadas puede ser complicado.
+			\item Investigador de la web, ya que la web es un sistema de información complejo y en constante actualización y crecimiento.
+		\end{itemize}
+	
+		Al ser una profesión tan novedosa no existen titulaciones oficiales, aunque sí multitud de congresos, exposiciones, webinarios y blogs donde formarse. No obstante, existen algunos portales de internet que expiden certificación acreditando la maestría del alumno, como \textit{ExpertRating.com} o \textit{SEOPros.org}. Además, los salarios varían dependiendo del cargo, pudiendo llegar a los 100000\$ al año.
+		
+		\begin{subsection}{Temporizaci\'on de b\'usqueda.}
+			\includegraphics[width=1.2\textwidth]{seo-session.png}
+		\end{subsection}
 	\newpage
 	
 	\begin{section}{Detecci\'on de plagio}
