--- a/Practica 1/bibliografia.bib
+++ b/Practica 1/bibliografia.bib
@@ -44,6 +44,15 @@ year={2018},
 
 @misc{seoc,
 	title = "\url{https://www.seoalcuadrado.es/seo-que-es/}",
-year = "consultado el 18 de septiembre de 2018",
+	year = "consultado el 18 de septiembre de 2018",
 }
 
+@misc{tutorial,
+	title = "\url{https://www.tutorialspoint.com/seo/seo-tactics-methods.htm}",
+	year = "consultado el 19 de septiembre de 2018",
+}
+
+@misc{seo-prof,
+	title = "\url{https://www.marketingcareeredu.org/search-engine-optimization-specialist/}",
+	year = "consultado el 19 de septiembre de 2018",
+}
