--- a/Practica 1/practica1.tex
+++ b/Practica 1/practica1.tex
@@ -73,12 +73,8 @@
 		\end{itemize}
 	
 		\subsection{Técnicas SEO}
-		Las técnicas del posicionamiento pueden ser muy variadas. Según \cite{tutorial}, las técnicas SEO se pueden clasificar en dos categorías:
-		\begin{itemize}
-			\item White hat SEO: Técnicas recomendadas por los buscadores como buen diseño
-			\item Black hat SEO: Conocidas como spamdexing, no son aprobadas por los buscadores.
-		\end{itemize}
-		
+		Las técnicas del posicionamiento pueden ser muy variadas. Según \cite{tutorial}, las técnicas SEO se pueden clasificar en dos categorías: White hat SEO: Técnicas recomendadas por los buscadores como buen diseño; y Black hat SEO: Conocidas como spamdexing, no son aprobadas por los buscadores.
+
 		\subsubsection{White Hat SEO}
 			Una táctica SEO se considera White hat si tiene las siguientes características:
 			\begin{itemize}
@@ -103,17 +99,7 @@
 	\end{section}
 	
 	\subsection{SEO como profesión}
-		Como hemos comentado anteriormente, el posicionamiento en buscadores es una pieza clave en el marketing online de las empresas. Tanto es así que ha dado lugar a una nueva profesión: el especialista SEO. En palabras de \cite{seo-prof}, los especialistas en posicionamiento no son normalmente programadores web, si no que son promotores de diseños web de calidad. Un SEO debe poseer un gran número de habilidades, como las siguientes:
-		
-		\begin{itemize}
-			\item Capacidad de análisis de páginas web.
-			 \item Capacidad de optimizar palabras clave.
-			\item Generación de contenido, para mantener una web de gran calidad llena de información en cualquier formato.
-			\item Configuración de los parámetros del buscador.
-			\item Habilidades IT, con gran conocimiento de HTML, CSS y otros lenguajes de programación.
-			\item Capacidad de resolver problemas
-			\item Conocimientos de marketing, comunicaciones o negocios.
-		\end{itemize}
+		Como hemos comentado anteriormente, el posicionamiento en buscadores es una pieza clave en el marketing online de las empresas. Tanto es así que ha dado lugar a una nueva profesión: el especialista SEO. En palabras de \cite{seo-prof}, los especialistas en posicionamiento no son normalmente programadores web, si no que son promotores de diseños web de calidad. Un SEO debe poseer un gran número de habilidades. Entre ellas se encuentra la capacidad de analizar páginas web, dado que será el responsable de mejorarla para llegar a más gente y de forma más atractiva. De la misma forma, deberá optimizar y actualizar las palabras clave acorde a la tendencia de los usuarios en sus consultas. Como consecuencia de las dos anteriores, el SEO generará el contenido de la web con el objetivo de mantener una web de calidad con información en todos los formatos (textual, gráficos, multimedia...). Los conocimientos de marketing, negocios y habilidades IT (manejo de lenguajes de programación como HTML, CSS u otros) son cruciales ya que se trata de una profesión multidisciplinar, donde se aúnan los intereses económicos con las nuevas tecnologías y la publicidad.
 	
 		Hay ciertos aspectos en los que un especialista SEO se puede centrar. Algunos de ellos son:
 		
