--- a/Practica 1/bibliografia.bib
+++ b/Practica 1/bibliografia.bib
@@ -56,3 +56,8 @@ year={2018},
 	title = "\url{https://www.marketingcareeredu.org/search-engine-optimization-specialist/}",
 	year = "consultado el 19 de septiembre de 2018",
 }
+
+@misc{cod,
+  title = "\url{https://www.40defiebre.com/que-es/white-hat-seo/}",
+  year = "consultado el 19 de septiembre de 2018",
+}
