--- a/Practica 1/practica1.tex
+++ b/Practica 1/practica1.tex
@@ -96,7 +96,7 @@
 		Las técnicas del posicionamiento pueden ser muy variadas. Según \cite{tutorial}, las técnicas SEO se pueden clasificar en dos categorías: White hat SEO: Técnicas recomendadas por los buscadores como buen diseño; y Black hat SEO: Conocidas como spamdexing, no son aprobadas por los buscadores.
 
 		\subsubsection{White Hat SEO}
-		Una táctica SEO se considera White hat si tiene las siguientes características:
+		White Hat SEO son aquellas técnicas éticamente correctas que cumplen las directrices marcadas por los motores de búsqueda para posicionar una web \cite{cod}. Más concretamente:
 		\begin{itemize}
 			\item Sigue las indicaciones del buscador.
 			\item No es engañosa.
@@ -106,7 +106,7 @@
 			\item Asegura disponibilidad del contenido web.
 		\end{itemize}
 		
-		\subsection{Spamdexing}
+		\subsection{Black hat SEO o Spamdexing}
 		El nombre es una contracción del inglés que se refiere a la indexación de spam, como vemos a continuación:
 		\begin{itemize}
 			\item Sirve una versión de la página para bots y otra para usuarios humanos (Cloaking).
