--- a/Practica 3/doc/P3-Balderas-Ruiz-Luis.tex
+++ b/Practica 3/doc/P3-Balderas-Ruiz-Luis.tex
@@ -144,6 +144,26 @@ Expongo los distintos requisitos de datos.
 	\caption{Flujo de datos RQuerySystem (Mostrar datos representa a la interfaz de usuario)} 
 \end{figure}
 
+\subsubsection{Diagramas de clase}
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+	\centering
+	\includegraphics[scale=0.4]{dcrqs.png}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+	\caption{Diagrama de clases RQSystem} 
+\end{figure}
+
+
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+	\centering
+	\includegraphics[scale=0.5]{dcsc.png}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+	\caption{Diagrama de clases Subsistema central} 
+\end{figure}
+
+
+
+
+
 \newpage
 \section{Manual de usuario}
 
