--- a/Practica 3/doc/P3-Balderas-Ruiz-Luis.tex
+++ b/Practica 3/doc/P3-Balderas-Ruiz-Luis.tex
@@ -175,4 +175,10 @@ Para el desarrollo de facetas o categorías he actuado a la manera de StackOverf
 
 Es un requisito para la utilización del programa que se rellenen todos los campos en uso, i.e., si se hace búsqueda por campos es necesario completar los dos cuadros de texto con su campo y decir qué relación hay entre ellos.
 
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+	\centering
+	\includegraphics[scale=0.4635]{resultado1.png}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+	\caption{Ejemplo de consulta por campos} 
+\end{figure}
+
 \end{document}
