--- a/Practica 3/doc/P3-Balderas-Ruiz-Luis.tex
+++ b/Practica 3/doc/P3-Balderas-Ruiz-Luis.tex
@@ -178,7 +178,7 @@ Es un requisito para la utilización del programa que se rellenen todos los camp
 \begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
 	\centering
 	\includegraphics[scale=0.4635]{resultado1.png}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
-	\caption{Ejemplo de consulta por campos.} 
+	\caption{Ejemplo de consulta por campos} 
 \end{figure}
 
 \end{document}
